Use <figure> instead of <div> for the flame elements

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ body {
 	animation: rise 1s ease-in infinite;
 	background-image: radial-gradient(#ff5000 20%, rgba(255, 80, 0, 0) 70%);
 	border-radius: 50%;
+	display: block;
 	mix-blend-mode: screen;
 	opacity: 0;
 	position: absolute;
 	bottom: 0;
+	margin: 0;
 	width: 5em;
 	height: 5em;
 }
@@ -248,57 +250,57 @@ body {
 		</style>
 	</head>
 	<body>
-		<div class="fire">
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-			<div class="particle"></div>
-		</div>
+		<figure class="fire">
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+			<figure class="particle"></figure>
+		</figure>
 	</body>
 </html>
