Fix links styles
Only in footer element links are button like style

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 				<dl>
 					<dt>E-MAIL</dt>
-					<dd>mailto:kontakt@feuerundflamme.xyz">kontakt@feuerundflamme.xyz</dd>
+					<dd><a href="mailto:kontakt@feuerundflamme.xyz">kontakt@feuerundflamme.xyz</a></dd>
 					<dt>ADRESSE</dt>
 					<dd>Rathausblock Kreuzberg. Obentrautstraße 1-21. 10961 Berlin</dd>
 					<dt>SOMMERQUARTIER: PLANGARAGE</dt>
