Use HTML codes for ampersand

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 				<h2>About</h2>
 
 				<dl>
-					<dt>Bündnis Feuer&Flamme</dt>
-					<dd>Das Bündnis Feuer&Flamme engagiert sich am Dragonerareal mit Workshops rund um den offenen Keramiktreff, Back- und Räucherhappenings am Backhauswagen und Einladungen zum gemeinsamen Kochen und Essen mit der Zusammenküche.</dd>
+					<dt>Bündnis Feuer&amp;Flamme</dt>
+					<dd>Das Bündnis Feuer&amp;Flamme engagiert sich am Dragonerareal mit Workshops rund um den offenen Keramiktreff, Back- und Räucherhappenings am Backhauswagen und Einladungen zum gemeinsamen Kochen und Essen mit der Zusammenküche.</dd>
 					<dd>Das Kochen und viele verwandte Tätigkeiten finden hauptsächlich im Privaten oder Verbogenen statt. Das partizipative Kochen möchte dazu beitragen, ein neues Verständnis der häuslichen Tätigkeit als wertvolle, produktive Einheit zu begreifen, die sozial engagierter ist und den Kontext stärker einbezieht als die gängige Idee des Haushalts als private Konsumeinheit.</dd>
 					<dd>Seit einem Jahrzehnt befeuern aktive Bürger*innen-Initiativen die öffentliche Diskussion über die Zukunft des Rathausblocks und haben daraus inzwischen ein Modellprojekt der kooperativen, gemeinwohlorientierten Stadtentwicklung gemacht. Das Bündnis Feuer&Flamme feuert weiter.</dd>
 				</dl>
