Add map and improve entry background color for better contrast

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 					<dd><a href="mailto:kontakt@feuerundflamme.xyz">kontakt@feuerundflamme.xyz</a></dd>
 					<dt>ADRESSE</dt>
 					<dd>Rathausblock Kreuzberg. Obentrautstraße 1-21. 10961 Berlin</dd>
+					<img src="map.jpg"/>
 					<dt>SOMMERQUARTIER: PLANGARAGE</dt>
 					<dd>Ihr findet die Plangarage auf dem Gelände hinter dem Finanzamt und der LPG am Mehringdamm in Kreuzberg. Am besten kommt man über die Ecke Mehringdamm / Obentraut Straße auf das Gelände. Von dort folgt ihr der Straße, bis auf der rechten Seite eine Garagenzeile mit hellblauen Türen erscheint. Hinter einer der Türen findet ihr uns.</dd>
 					<dt>WINTERQUARTIER: KIEZRAUM</dt>
